prevent headers from overlapping boxes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,15 +24,15 @@
     text-align: center;
     font-size: 2em;
     /* transform: scale(2); */
-    /* padding-bottom: 20px; */
-    /* padding-top: 20px; */
+    padding-bottom: 20px;
+    /*padding-top: 20px;*/
 }
 
 .body_header {
     font-family: "Canela Deck", serif;
     text-align: center;
     font-size: 35pt;
-    margin-bottom: -30px;
+    /*margin-bottom: -30px;*/
     margin-top: -10px;
     /* transform: scale(2); */
     /* padding-bottom: 20px; */
